# delphyne

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
docs/: index.md
examples/leandra/experiments/analysis/: .gitignore  analyze.py
examples/zebra_logic/: .gitignore  baseline.demo.yaml  baseline.exec.yaml  baseline.py  baselinehard.exec.yaml  create_dataset.py  delphyne.yaml  fol.py  folio_aggregate.py  folio_baseline.py  folio_iterative.py  folio_iterative_back.py  folio_iterative_blacklist.py  folio_standard.py  z3_tools.py  zebra_baseline.py  zebra_parser.py
examples/zebra_logic/cache/: baseline.exec.yaml  baselinehard.exec.yaml  folio_baseline.exec.yaml  folio_iteback.exec.yaml  folio_iterative.exec.yaml  zebra_baseline.exec.yaml  zebra_baselinehard.exec.yaml
examples/zebra_logic/commands/: folio_aggregate.exec.yaml  folio_baseline.exec.yaml  folio_formalization_agent.exec.yaml  folio_iteback.exec.yaml  folio_iterative.exec.yaml  folio_oneshot.exec.yaml  folio_only_ask.exec.yaml  folio_z3_agent.exec.yaml  zebra_baseline.exec.yaml
examples/zebra_logic/demos/: folio_baseline.demo.yaml  folio_iterative_blacklist.demo.yaml  zebra_baseline.demo.yaml
examples/zebra_logic/experiments/: aggregate_experiment.py  content.md  failures  failures.txt  folio_experiments.py  formalization_agent_experiment.py  iterative_blacklist_experiment.py  iterative_naive_experiment.py  new_api.md  oneshot_experiment.py  only_ask_experiment.py  postprocess.py  reasoning_cache.md  results.txt  visualize_heatmap.py  visualize_mixed_sequence.py  visualize_oneshot_heatmap.py  z3_agent_experiment.py
examples/zebra_logic/experiments/output_9feb/: aggregate_summary.csv  oneshot_summary.csv
examples/zebra_logic/prompts/: CheckDeductionWithZ3.instance.jinja  CheckDeductionWithZ3.system.jinja  CheckDeductionZ3Code.instance.jinja  CheckDeductionZ3Code.system.jinja  FormalizeClue.feedback.jinja  FormalizeFOLConstraint.instance.jinja  FormalizeFOLConstraint.system.jinja  FormalizeFOLOneShot.instance.jinja  ReflectIfSat.instance.jinja  ReflectIfSat.system.jinja  ReflectIfUnsat.feedback.jinja  ReflectIfUnsat.instance.jinja
src/delphyne/core/: trees.py
src/delphyne/stdlib/: standard_models.py  streams.py
src/delphyne/stdlib/search/: iteration.py
vscode-ui/: package-lock.json  package.json
(+1 files in other folders)
